[package]
name = "kyber_rs"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = "The post-quantum cryptographic library in Rust."
license = "MIT"
documentation = "https://docs.rs/kyber-ru/latest/kyber-ru/"
repository = "https://github.com/mjovanc/pqc"
readme = "../README.md"
rust-version = "1.86.0"
homepage = "https://github.com/mjovanc/pqc"
keywords = ["kyber", "post-quantum", "pqc", "cryptography", "quantum-safe"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
thiserror = { workspace = true }
rand = "0.9.0"
sha3 = "0.10.8"
zeroize = { version = "1.8.1", features = ["derive"] }
log = { workspace = true }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
